# rpi_bot

./: CMakeLists.txt  README.md  demo.sh
AWS/: awsNotification.py  requestLocation.py
AWS/certs/: 806f08c1d1530e5f30d445233258e5403f7a43e0595336fb46cec2067e54c9c7-certificate.pem.crt  806f08c1d1530e5f30d445233258e5403f7a43e0595336fb46cec2067e54c9c7-private.pem.key  806f08c1d1530e5f30d445233258e5403f7a43e0595336fb46cec2067e54c9c7-public.pem.key
blink/: blink.c
includes/: EuclideanGraph.h  FileIO.h  constants.h  motor_controller.h  rotary_encoder.h  ultrasonic.h
input_check/: read_input_check.c
motor_controller/: motor_controller.c
objects/: DistanceMatrix.cpp  DistanceMatrix.h  EuclideanGraph.cpp  EuclideanGraph.h  EuclideanPoint.cpp  EuclideanPoint.h  FileIO.cpp  GraphEdge.cpp  GraphEdge.h
parse_input/: parse_input.c
pi4/uart_comm/: uart_comm.cpp
rotary_encoder/: rotary_encoder.c
rotary_encoder_usb_comm/: rotary_encoder.c
ultrasonic/: ultrasonic.c
ultrasonic_usb_comm/: ultrasonic.c
usb_comm/: usb_comm.c
